v0.2.6 (Bug fix:Refactor CSS styles and fix layout issues)

--- a/public/index.css
+++ b/public/index.css
@@ -1,54 +1,40 @@
 html {
     height: 100%;
 }
-
 body {
     margin: 0;
     min-height: 100%;
 }
-
-.item1 {
-    grid-area: header;
-}
-
-.item2 {
-    grid-area: menu;
-}
-
-.item3 {
-    grid-area: main;
-}
-
-.item4 {
-    grid-area: footer;
-}
+.item1 {grid-area: header;}
+.item2 {grid-area: menu;}
+.item3 {grid-area: main;}
+.item4 {grid-area: footer;}
 
 .item1 {
     width: 100%;
+    background-color: #1c1c1c;
+    color: #ffffff;
+    border-top: 3px solid #000;
+    font-size: 3vb;
 }
-
 .item2 {
-    height: 100%;
-    width: fit-content;
+    width: 100%;
     background-color: #1c1c1c;
     border-right: 2px solid #000;
     border-top: 3px solid #000;
 
 }
-
 .item3 {
     height: 100%;
     width: 100%;
     background-color: #ffffff;
     border-color: #000;
 }
-
 .item4 {
     width: 100%;
     background-color: #1c1c1c;
     color: #ffffff;
     border-top: 3px solid #000;
-    padding: 10px;
     font-size: 3vb;
 }
 
