--- a/public/navbar.css
+++ b/public/navbar.css
@@ -4,12 +4,13 @@ body {
     min-height: 100%;
 }
 .navbar {
+    width: 100%;
     background-color: #1c1c1c;
     color: #ffffff;
     display: flex;
+    height: 8vh;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
 }
 
 .navbar-logo {
@@ -18,7 +19,8 @@ body {
 }
 .navbar-logo img {
     filter: invert(1);
-    padding:10px;
+    padding-left:40px;
+    height: 6vh;
 }
 
 .navbar-menu {
@@ -28,6 +30,8 @@ body {
     margin: 0;
     padding: 0;
     align-items: center; /* Add this line */
+    margin-right: 4vb;
+
 }
 
 .navbar-menu li {
